--- a/templates/article.jade
+++ b/templates/article.jade
@@ -7,113 +7,15 @@ block content
   .page-header
     a(href=page.url)
       h1=page.title
-  p#post_top_meta1.muted
-    span.meta-prep.meta-prep-author
-      | Posté le 
-    span.entry-date
-      = page.date.toString('dddd dd MMMM yyyy')
-    | | 
-    span.meta-sep
-      |  Ecrit par 
-    span.author.vcard
-      = page.metadata.author
-    | | 
-    a(href=page.url)
-      | Lien permanent
-    | | 
-    a(href="#disqus_thread")
-      | Commentaires
-    | | Posté dans 
-    each category in page.metadata.categories
-      a(href="/category/#{category}", rel="category tag", title="View all posts in '#{category}'")
-        = category
-      &nbsp;
+  include subtitle
   hr
   .post_content
     !=page.html
   hr
-  p#post_top_meta1.muted
-    span.meta-prep.meta-prep-author
-      | Posté le 
-    span.entry-date
-      = page.date.toString('dddd dd MMMM yyyy')
-    | | 
-    span.meta-sep
-      |  Ecrit par 
-    span.author.vcard
-      = page.metadata.author
-    | | 
-    a(href=page.url)
-      | Lien permanent
-    | | 
-    a(href="#disqus_thread")
-      | Commentaires
-    | | Posté dans 
-    each category in page.metadata.categories
-      a(href="/category/#{category}", rel="category tag", title="View all posts in '#{category}'")
-        = category
-      &nbsp;
-  p#post_bottom_meta2.muted
-    | Taggé avec: 
-    each tag in page.metadata.tags
-      a(href="/tag/#{tag}", rel="category tag", title="View all posts in '#{tag}'")
-        = tag
-      &nbsp;
-  #social_bottom.topsocial
-    .social
-      - var socialstags = _.chain(page.metadata.tags).map(function(tag) {
-      -   return "#" + tag
-      - }).value().join(" ")
-        a(href=page.url.replace(/(\s+)?.$/, "").replace('articles', 'post') + ".html", class="twitter-share-button", data-url=locals.url + page.url.replace(/(\s+)?.$/, "").replace('articles', 'post') + ".html", data-text=page.title + " #{socialstags} /via @obazoud", data-count="vertical"): twitter-share-button
-      | <script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
-    .social
-      <g:plusone size="tall" href="#{locals.url}#{page.url.replace(/(\s+)?.$/, "").replace('articles', 'post')}.html"></g:plusone>
-    .social
-      | <script src="http://platform.linkedin.com/in.js" type="text/javascript"></script>
-      | <script type="IN/Share" data-url="#{locals.url}#{page.url.replace(/(\s+)?.$/, "").replace('articles', 'post')}.html" data-counter="top"></script>
-    .social
-      .share-delicious
-        #delic.delicious 0
-        #delicious-b
-          a(href='http://del.icio.us/post?url=#{locals.url}#{page.url.replace(/(\s+)?.$/, "").replace('articles', 'post')}.html&title="Save To Delicious"', target='blank') delicious
-      |  <script type='text/javascript'>
-      |  function delic(info) {
-      |   if(!info[0]) return;
-      |   var num = info[0].total_posts;
-      |    if(!num) return;
-      |    var delic = document.getElementById('delic');
-      |    delic.innerHTML = '' + num;
-      |    delic.style.textIndent = 0;
-      |    delic.style.paddingRight= '6px';
-      |  }
-      |  </script>
-      |  <script src='http://badges.del.icio.us/feeds/json/url/data?url=#{locals.url}#{page.url.replace(/(\s+)?.$/, "").replace('articles', 'post')}.html'&callback=declic></script>
-
-
+  include subtitle
+  include social
   hr
   h3 Articles similaires
-    table.table.table-striped
-      tbody
-          tr
-            td
-              a(href="/"): TODO
+    include related
   h3 Commentaires
-    #disqus_thread
-      | <script type="text/javascript">
-      | var disqus_shortname = locals.disqus.shortname;
-      | (function() {
-      |    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-      |    dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-      |    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-      | })();
-      | </script>
-      | <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-      | <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
-
-  | <script type="text/javascript">
-  |   (function() {
-  |     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-  |     po.src = 'https://apis.google.com/js/plusone.js';
-  |     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  |   })();
-  | </script>
+    include disqus
