Tag and archive cloud

--- a/contents/styles/mystyle.css
+++ b/contents/styles/mystyle.css
@@ -242,11 +242,19 @@ span.ext {
     color: #090909;
     font-size: 1.96em;
 }
+.tagcloud a.size-22 {
+    color: #090909;
+    font-size: 1.96em;
+}
+.tagcloud a.size-23 {
+    color: #090909;
+    font-size: 1.96em;
+}
 .tagcloud a.size-24 {
     color: #090909;
     font-size: 1.96em;
 }
-.tagcloud a.size-46 {
+.tagcloud a.size-25 {
     color: #090909;
     font-size: 1.96em;
 }
