Fix disqus template

--- a/templates/disqus.jade
+++ b/templates/disqus.jade
@@ -1,6 +1,6 @@
 #disqus_thread
 | <script type="text/javascript">
-| var disqus_shortname = locals.disqus.shortname;
+| var disqus_shortname = '#{locals.disqus.shortname}';
 | (function() {
 |    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
 |    dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
