--- a/templates/archivecloud.jade
+++ b/templates/archivecloud.jade
@@ -8,8 +8,14 @@
 -   counts[word] = (counts[word] || 0) + 1
 -   return counts
 - }, {}).value()
-
+- var countAll = _.chain(contents.articles._.directories).map(function(item) {
+-   return item.index
+- }).compact().filter(function(article) {
+-   return article.metadata.ignored !== true
+- }).flatten().size().value()
 #tags.tagcloud
+  a(class="size-25", href="/archive.html", title="Total: #{countAll} posts")
+    | Toutes
   each count, word in cloud
     = '\r\n'
     - var sizeCount = Math.min(Math.floor(count / 1.25), 25)
