--- a/templates/feed.jade
+++ b/templates/feed.jade
@@ -1,24 +1,45 @@
 doctype xml
 rss(version='2.0',
-    xmlns:content='http://purl.org/rss/1.0/modules/content/',
-    xmlns:wfw='http://wellformedweb.org/CommentAPI/',
-    xmlns:dc='http://purl.org/dc/elements/1.1/'
-    xmlns:atom='http://www.w3.org/2005/Atom')
+    xmlns:content="http://purl.org/rss/1.0/modules/content/",
+    xmlns:wfw="http://wellformedweb.org/CommentAPI/",
+    xmlns:dc="http://purl.org/dc/elements/1.1/",
+    xmlns:atom="http://www.w3.org/2005/Atom",
+    xmlns:sy="http://purl.org/rss/1.0/modules/syndication/",
+    xmlns:slash="http://purl.org/rss/1.0/modules/slash/")
   channel
-    - var articles = contents.articles._.directories.map(function(item){ return item.index });
+  - var articles = _.chain(contents.articles._.directories).map(function(item) {
+  -   return item.index
+  - }).compact().filter(function(article) {
+  -   return article.metadata.ignored !== true
+  - }).sortBy(function(item) {
+  -   return -item.date
+  - }).first(10).value() // and finally take the first 5
+
     title= locals.name
-    atom:link(href=locals.url + '/feed.xml', rel='self', type='application/rss+xml')
+    atom:link(href=locals.feeds.feed, rel='self', type='application/rss+xml')
     link= locals.url
-    description= locals.description
-    pubDate= articles[0].rfc822date
-    generator The mighty Wintersmith
-    language en
+    description= locals.name
+    - var buildDate = new Date().toISOString()
+    lastBuildDate= buildDate
+    language fr
+    | <sy:updatePeriod>hourly</sy:updatePeriod>
+    | <sy:updateFrequency>1</sy:updateFrequency>
+    | <generator uri="https://github.com/jnordberg/wintersmith" version="1.1.1">Wintersmith</generator>
     for article in articles
       - var permalink = locals.url + article.url
+      - var commentlink = permalink + "#disqus_thread"
       item
-        title= article.title
+        title <![CDATA[#{article.title}]]>
         link= permalink
-        pubDate= article.rfc822date
+        comments= commentlink
+        pubDate= article.date.toISOString()
+        each currentTag in article.metadata.tags
+            category <![CDATA[#{currentTag}]]>
+
         guid(isPermaLink='true')= permalink
-        author= article.author
-        description= article.getHtml(locals.url) // passing locals.url resolves all relative urls to absolute
+        dc:creator= article.metadata.author
+        author= article.metadata.author
+        description <![CDATA[#{article.metadata.excerpt}]]>
+        content:encoded <![CDATA[#{article.metadata.excerpt}]]> - &lt;a href="#{permalink}"&gt;Lire la suite&lt;/a&gt;
+        slash:comments 0
+
