--- a/templates/tag.jade
+++ b/templates/tag.jade
@@ -8,7 +8,7 @@ block content
   - }).compact().filter(function(article) {
   -   return article.metadata.ignored !== true
   - }).filter(function(article) {
-  -   return _.indexOf(article.metadata.tags, page.metadata.currentTag) > 0
+  -   return _.indexOf(article.metadata.tags, page.metadata.currentTag) >= 0
   - }).sortBy(function(item) {
   -   return -item.date
   - }).value()
