--- a/templates/index.jade
+++ b/templates/index.jade
@@ -1,5 +1,8 @@
 extends layout
 
+block append title
+  |  » Les derniers articles
+
 block content
   include author
   //- underscore helps us filter and sort our articles
