--- a/templates/atom.jade
+++ b/templates/atom.jade
@@ -30,8 +30,8 @@ feed(xmlns="http://www.w3.org/2005/Atom", xmlns:thr="http://purl.org/syndication
       published= article.date.toISOString()
       each currentTag in article.metadata.tags
           category(scheme=locals.url, term=currentTag, telabel=currentTag)
-      summary(type="html") <![CDATA[#{article.metadata.excerpt} - &lt;a href="#{permalink}"&gt;Lire la suite&lt;/a&gt;]]>
-      content(type="html") <![CDATA[#{article.metadata.excerpt} - &lt;a href="#{permalink}"&gt;Lire la suite&lt;/a&gt;]]>
+      summary(type="html") <![CDATA[#{article.metadata.excerpt}]]>
+      content(type="html") <![CDATA[#{article.metadata.excerpt}]]>
       link(rel="replies", type="text/html", href=commentlink, thr:count="0")
       link(rel="replies", type="application/atom+xml", href=disqusRss, thr:count="0")
       thr:total 0
