--- a/templates/rss.jade
+++ b/templates/rss.jade
@@ -35,7 +35,7 @@ rss(xmlns="http://www.w3.org/2005/Atom",
           each currentTag in article.metadata.tags
             category(schema=locals.url, term=currentTag)
           summary(type="html")
-          content(type="html", xml:base=permalink) #{article.metadata.excerpt} - &lt;a href="#{permalink}"&gt;Lire la suite&lt;/a&gt;
+          content(type="html", xml:base=permalink) #{article.metadata.excerpt}
           link(rel="replies", type="text/html", href=commentlink, thr:count="0")
           link(rel="replies", type="application/rss+xml", href=commentlink, thr:count="0")= disqusRss
           thr:total 0
